--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "nychat",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.2"
-  }
+    "name": "nychat",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "next": "10.0.3",
+        "react": "17.0.1",
+        "react-dom": "17.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.10",
+        "@types/react": "^17.0.0",
+        "prettier": "2.2.1",
+        "typescript": "^4.1.2"
+    }
 }
