--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "devDependencies": {
         "@types/node": "^14.14.10",
         "@types/react": "^17.0.0",
+        "autoprefixer": "^10.0.4",
+        "postcss": "^8.1.10",
         "prettier": "2.2.1",
+        "tailwindcss": "^2.0.1",
         "typescript": "^4.1.2"
     }
 }
