--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --port 1234",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "export": "next export"
     },
     "dependencies": {
         "next": "10.0.3",
