--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "17.0.1"
     },
     "devDependencies": {
+        "@tailwindcss/custom-forms": "^0.2.1",
         "@types/node": "^14.14.10",
         "@types/react": "^17.0.0",
         "autoprefixer": "^10.0.4",
