--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --port 1234",
+        "dev": "next dev -p 1234",
         "build": "next build",
-        "start": "next start",
-        "export": "next export"
+        "start": "next start -p 8080",
+        "deploy": "gcloud app deploy --version main"
     },
     "dependencies": {
         "next": "10.0.3",
