--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+            alias yarn="~/.yarn/bin/yarn.js"
             cd /opt/app
             yarn
             yarn build
