--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd /opt/app
-            mkdir /opt/ITWORKS
-            sh -c yarn
-            sh -c yarn build
+            yarn
+            yarn build
             pkill screen
             screen -d -m -S test yarn start
