--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd /opt/app
-            nvm use node
+            . ~/.bashrc
             yarn
             yarn build
             pkill screen
