--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,9 @@ jobs:
           source: '.'
           target: '/opt/app'
 
-      - name: Executing remote command to build and start the app
+      - name: Executing remote command to start the app
         uses: appleboy/ssh-action@master
         with:
-          script_stop: true
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
