--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          script: |
-            cd /opt/app
-            yarn
-            yarn build
-            pkill screen
-            screen -d -m -S test yarn start
+          script: /opt/buildNStart.sh
